--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -33,7 +33,7 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <div ng-controller="ChatCtrl">
-  <ion-tab title="chat" badge="1"  icon-off="ion-ios-chatbubble-outline" icon-on="ion-ios-chatbubble" href="#/tab/chat">
+  <ion-tab title="chat"  icon-off="ion-ios-chatbubble-outline" icon-on="ion-ios-chatbubble" href="#/tab/chat">
     <ion-nav-view name="tab-chat"></ion-nav-view>
   </ion-tab>
   </div>
