--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -9,34 +9,37 @@ navigation history that also transitions its views in and out.
   <!-- Dashboard Tab -->
   <div ng-controller="NewCtrl" ng-init="init()">
 
-  <ion-tab title="งานใหม่" badge="countOrder"  on-select="readOrder()" icon-off="ion-ios-paper"  icon-on="ion-ios-paper-outline" href="#/tab/new">
-    <ion-nav-view name="tab-new"></ion-nav-view>
-  </ion-tab>
-</div>
+    <ion-tab title="งานใหม่" badge="countOrder" on-select="readOrder()" icon-off="ion-ios-paper" icon-on="ion-ios-paper-outline"
+      href="#/tab/new">
+      <ion-nav-view name="tab-new"></ion-nav-view>
+    </ion-tab>
+  </div>
   <!-- Me Tab -->
   <div ng-controller="NewCtrl" ng-init="init()">
-  <ion-tab title="ของฉัน" badge="countOrderApt"  icon-off="ion-ios-compose-outline" icon-on="ion-ios-compose" href="#/tab/me">
-    <ion-nav-view name="tab-me"></ion-nav-view>
-  </ion-tab>
+    <ion-tab title="ของฉัน" badge="countOrderApt" icon-off="ion-ios-compose-outline" icon-on="ion-ios-compose" href="#/tab/me">
+      <ion-nav-view name="tab-me"></ion-nav-view>
+    </ion-tab>
   </div>
 
   <!-- Map Tab -->
-   <div ng-controller="MapCtrl">
-  <ion-tab title="แผนที่" ng-click="clearItem()"  icon-off="ion-ios-location-outline" icon-on="ion-ios-location">
-    <ion-nav-view name="tab-map"></ion-nav-view>
-  </ion-tab>
-   </div>
+  <div ng-controller="MapCtrl">
+    <ion-tab title="แผนที่" ng-click="clearItem()" icon-off="ion-ios-location-outline" icon-on="ion-ios-location">
+      <ion-nav-view name="tab-map"></ion-nav-view>
+    </ion-tab>
+  </div>
+
+  <!-- chat -->
+  <div ng-controller="ChatCtrl">
+    <ion-tab title="สนทนา" icon-off="ion-ios-chatbubble-outline" icon-on="ion-ios-chatbubble" href="#/tab/chat">
+      <ion-nav-view name="tab-chat"></ion-nav-view>
+    </ion-tab>
+  </div>
 
   <!-- More Tab -->
   <ion-tab title="อื่นๆ" icon-off="ion-ios-more-outline" icon-on="ion-ios-more" href="#/tab/more">
     <ion-nav-view name="tab-more"></ion-nav-view>
   </ion-tab>
 
-  <div ng-controller="ChatCtrl">
-  <ion-tab title="chat"  icon-off="ion-ios-chatbubble-outline" icon-on="ion-ios-chatbubble" href="#/tab/chat">
-    <ion-nav-view name="tab-chat"></ion-nav-view>
-  </ion-tab>
-  </div>
 
 
 
