--- a/www/templates/user-profile-detail.html
+++ b/www/templates/user-profile-detail.html
@@ -21,6 +21,7 @@
                                 <i class="icon ion-ios-chatbubble"></i> พูดคุย
                             </a>
                         </div>-->
+                        <!--{{data.shipping}}-->
                         <div class="col col-100">
                             <a ng-click="tel({{data.shipping.tel}})" class="item item-icon-left">
                                 <i class="icon ion-ios-telephone"></i> โทร {{data.shipping.tel}}
