--- a/www/templates/new-detail.html
+++ b/www/templates/new-detail.html
@@ -23,7 +23,7 @@
                     </label>
             </label>
             <div>
-                <button class="button button-block button-outline button-positive icon-left ion-ios-location" ui-sref="tab.map({point:data._id})">
+                <button class="button button-block button-outline button-positive icon-left ion-ios-location" ui-sref="app.tab.map({point:data._id})">
                                 ค้นหาเส้นทาง
                 </button>
             </div>
