--- a/www/css/style.css
+++ b/www/css/style.css
@@ -175,6 +175,12 @@ span1 {
     text-align: left !important;
     max-width: 180px !important;
 }
+#back {
+    border-color: transparent !important;
+    background: none !important;
+    box-shadow: none !important;
+    color: #000000 !important;
+}
 
 /*.amount {
     font-size: smaller !important;
