--- a/www/templates/me-detail.html
+++ b/www/templates/me-detail.html
@@ -11,7 +11,7 @@
                 <input ng-value="data.docdate | date:'dd/MM/yyyy'" type="text" style="background-color: white" readonly>
             </label>
 
-            <label class="item item-input">
+            <label class="item item-input" ng-click="btnGoDetail(data)">
                 <span class="input-label">ชื่อ : </span>
                 <input ng-model="data.user.displayName" type="text" style="background-color: white" readonly>
             </label>
@@ -27,7 +27,7 @@
                 <input ng-model="data.shipping.tel" type="text" style="background-color: white" readonly>
             </label>
             <div>
-                <button class="button button-block button-outline button-positive icon-left ion-ios-location" ui-sref="tab.map({point:data._id})">
+                <button class="button button-block button-outline button-positive icon-left ion-ios-location" ui-sref="app.tab.map({point:data._id})">
                                 ค้นหาเส้นทาง
                 </button>
             </div>
