--- a/www/templates/tab-chat.html
+++ b/www/templates/tab-chat.html
@@ -7,7 +7,7 @@
     <ion-content>
         <ion-list>
             <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats | filter: { users : { _id : user._id } }"
-                type="item-text-wrap" ui-sref="tab.chat-detail({chatId: chat._id})">
+                type="item-text-wrap" ui-sref="app.tab.chat-detail({chatId: chat._id})">
                 <img ng-repeat="user in chat.users | filter: { _id : '!' + user._id}" ng-src="{{user.profileImageURL}}">
                 <h2 ng-repeat="user in chat.users | filter: { _id : '!' + user._id}">{{user.displayName}}</h2>
                 <p>{{chat.lastText}}</p>
@@ -19,7 +19,8 @@
             </ion-item>
         </ion-list>
     </ion-content>
-    <!--<ion-footer-bar>
-        <i class="icon ion-android-person-add" style="font-size: 30px;" ui-sref="app.listfriend"></i>
-    </ion-footer-bar>-->
+    <ion-footer-bar>
+        <i class="icon ion-android-person-add" style="font-size: 30px;" ui-sref="app.tab.listfriend"></i> 
+        <span> เพิ่มการสนทนา</span>
+    </ion-footer-bar>
 </ion-view>
