--- a/www/templates/user-profile-detail.html
+++ b/www/templates/user-profile-detail.html
@@ -17,7 +17,7 @@
                 <div class="list card">
                     <div class="row">
                         <!--<div class="col col-50">
-                            <a ui-sref="tab.chat" class="item item-icon-left">
+                            <a ui-sref="app.tab.chat" class="item item-icon-left">
                                 <i class="icon ion-ios-chatbubble"></i> พูดคุย
                             </a>
                         </div>-->
