--- a/www/templates/listreceived.html
+++ b/www/templates/listreceived.html
@@ -10,13 +10,19 @@
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
         </ion-refresher>
 
-        <div class="row">
+        <div class="row badge-buttonnoti">
             <div class="col"></div>
             <div class="col col-90">
                 <div class="button-bar">
-                    <a class="button button-outline button-positive {{Request === true ? 'active' : ''}}" ng-click="Request = true ;Response = false;Received = false ;">ร้องขอ</a>
-                    <a class="button button-outline button-positive {{Response === true ? 'active' : ''}}" ng-click="Response = true;Received = false ;Request=false">ตอบกลับ</a>
-                    <a class="button button-outline button-positive {{Received === true ? 'active' : ''}}" ng-click="Received = true; Response= false ;Request=false">ได้รับ</a>
+                    <a class="button button-outline button-positive {{Request === true ? 'active' : ''}}" ng-click="Request = true ;Response = false;Received = false ;">ร้องขอ
+                        <span class="badge badge-assertive badge-notify">{{countlistRequest}}</span>
+                    </a>
+                    <a class="button button-outline button-positive {{Response === true ? 'active' : ''}}" ng-click="Response = true;Received = false ;Request=false">ตอบกลับ
+                        <span class="badge badge-assertive badge-notify">{{countlistResponse}}</span>
+                    </a>
+                    <a class="button button-outline button-positive {{Received === true ? 'active' : ''}}" ng-click="Received = true; Response= false ;Request=false">ได้รับ
+                        <span class="badge badge-assertive badge-notify">{{countlistReceived}}</span>
+                    </a>
                 </div>
             </div>
             <div class="col"></div>
