--- a/www/templates/listAr.html
+++ b/www/templates/listAr.html
@@ -10,13 +10,19 @@
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
         </ion-refresher>
 
-        <div class="row">
+        <div class="row badge-buttonnoti">
             <div class="col"></div>
             <div class="col col-90">
                 <div class="button-bar">
-                    <a class="button button-outline button-positive {{Request === true ? 'active' : ''}}" ng-click="Request = true ;Response = false;Received = false ;">รอยืนยัน</a>
-                    <a class="button button-outline button-positive {{Response === true ? 'active' : ''}}" ng-click="Response = true;Received = false ;Request=false">ยืนยันแล้ว</a>
-                    <a class="button button-outline button-positive {{Received === true ? 'active' : ''}}" ng-click="Received = true; Response= false ;Request=false">รับเงินแล้ว</a>
+                    <a class="button button-outline button-positive {{Request === true ? 'active' : ''}}" ng-click="Request = true ;Response = false;Received = false ;">รอยืนยัน
+                        <span class="badge badge-assertive badge-notify">{{countlistarWait}}</span>
+                    </a>
+                    <a class="button button-outline button-positive {{Response === true ? 'active' : ''}}" ng-click="Response = true;Received = false ;Request=false">ยืนยันแล้ว
+                        <span class="badge badge-assertive badge-notify">{{countlistarConfirmed}}</span>
+                    </a>
+                    <a class="button button-outline button-positive {{Received === true ? 'active' : ''}}" ng-click="Received = true; Response= false ;Request=false">รับเงินแล้ว
+                        <span class="badge badge-assertive badge-notify">{{countlistarReceipt}}</span>
+                    </a>
                 </div>
             </div>
             <div class="col"></div>
