--- a/www/templates/listReturn.html
+++ b/www/templates/listReturn.html
@@ -10,13 +10,19 @@
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
         </ion-refresher>
 
-        <div class="row">
+        <div class="row badge-buttonnoti">
             <div class="col"></div>
             <div class="col col-90">
                 <div class="button-bar">
-                    <a class="button button-outline button-positive {{Request === true ? 'active' : ''}}" ng-click="Request = true ;Response = false;Received = false ;">แจ้งคืน</a>
-                    <a class="button button-outline button-positive {{Response === true ? 'active' : ''}}" ng-click="Response = true;Received = false ;Request=false">ตอบกลับ</a>
-                    <a class="button button-outline button-positive {{Received === true ? 'active' : ''}}" ng-click="Received = true; Response= false ;Request=false">ได้รับ</a>
+                    <a class="button button-outline button-positive {{Request === true ? 'active' : ''}}" ng-click="Request = true ;Response = false;Received = false ;">แจ้งคืน
+                        <span class="badge badge-assertive badge-notify">{{countlistReturns}}</span>
+                    </a>
+                    <a class="button button-outline button-positive {{Response === true ? 'active' : ''}}" ng-click="Response = true;Received = false ;Request=false">ตอบกลับ
+                        <span class="badge badge-assertive badge-notify">{{countlistreturnResponse}}</span>
+                    </a>
+                    <a class="button button-outline button-positive {{Received === true ? 'active' : ''}}" ng-click="Received = true; Response= false ;Request=false">ได้รับ
+                        <span class="badge badge-assertive badge-notify">{{countlistreturnReceived}}</span>
+                    </a>
                 </div>
             </div>
             <div class="col"></div>
@@ -31,7 +37,7 @@
             </ion-nav-buttons>-->
 
         <div ng-show="Response" ng-repeat="data in listreturnResponse | filter:topsearch">
-            <ion-item class='item item-avatar-left item-icon-right'  ng-click="returnOrderDetail(data)">
+            <ion-item class='item item-avatar-left item-icon-right' ng-click="returnOrderDetail(data)">
                 <img src={{data.namedeliver.profileImageURL}}>
                 <h2>{{data.namedeliver.displayName}}</h2>
                 <p style="margin-right: 20%">{{data.shipping.address}} {{data.shipping.subdistrict}}</p>
