--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,32 +18,39 @@
         <ion-header-bar class="bar-dark">
             <h1 class="title">เมนู</h1>
         </ion-header-bar>
-        <ion-content has-bouncing="false" class="menu-outer left-menu"> 
+        <ion-content has-bouncing="false" class="menu-outer left-menu">
             <div class="list">
-                <a class="item item-icon-left settings-option" menu-close ui-sref="app.tab.new">
-                    <i class="icon ion-ios-home-outline"></i> หน้าแรก
-                </a>
-                <a class="item item-icon-left settings-option" menu-close ng-click="listbl()">
-                    <i class="icon ion-ios-list-outline"></i> เปิดบิลลอย
-                </a>
-                <a class="item item-icon-left settings-option" menu-close ng-click="listreceived()">
-                    <i class="icon ion-ios-bookmarks-outline"></i> รายการรับข้าว
-                </a>
-                <a class="item item-icon-left settings-option" menu-close ng-click="liststock()">
-                    <i class="icon ion-social-buffer-outline"></i> สต๊อก
-                </a>
-                <a class="item item-icon-left settings-option" menu-close ng-click="listReturn()">
-                    <i class="icon icon ion-ios-list-outline"></i> รายการใบแจ้งคืน
-                </a>
-                <a class="item item-icon-left settings-option" menu-close ng-click="listAr()">
-                    <i class="icon icon ion-ios-list-outline"></i> รายการใบแจ้งหนี้
-                </a>
-                <a class="item item-icon-left settings-option" menu-close ng-click="listdetail()">
-                    <i class="icon ion-ios-contact-outline"></i> ประวัติส่วนตัว
-                </a>
-                <a class="item item-icon-left settings-option" menu-close ng-click="doLogOut()">
-                    <i class="icon ion-ios-close-outline"></i> ออกจากระบบ
-                </a>
+
+                <div ng-controller="menuCtrl">
+                    <a class="item item-icon-left settings-option" menu-close ui-sref="app.tab.new">
+                        <i class="icon ion-ios-home-outline"></i> หน้าแรก
+                    </a>
+                    <a class="item item-icon-left settings-option" menu-close ng-click="listbl()">
+                        <i class="icon ion-ios-list-outline"></i> เปิดบิลลอย
+                    </a>
+                    <a class="item item-icon-left settings-option" menu-close ng-click="listreceived()">
+                        <i class="icon ion-ios-bookmarks-outline"></i> รายการรับข้าว
+                        <span class="badge badge-assertive">{{countlistreceiveds}}</span>
+                    </a>
+                    <a class="item item-icon-left settings-option" menu-close ng-click="liststock()">
+                        <i class="icon ion-social-buffer-outline"></i> สต๊อก
+                        <span class="badge badge-assertive">{{countStock}}</span>
+                    </a>
+                    <a class="item item-icon-left settings-option" menu-close ng-click="listReturn()">
+                        <i class="icon icon ion-ios-list-outline"></i> รายการใบแจ้งคืน
+                        <span class="badge badge-assertive">{{countlistReturned}}</span>
+                    </a>
+                    <a class="item item-icon-left settings-option" menu-close ng-click="listAr()">
+                        <i class="icon icon ion-ios-list-outline"></i> รายการใบแจ้งหนี้
+                        <span class="badge badge-assertive">{{countlistAr}}</span>
+                    </a>
+                    <a class="item item-icon-left settings-option" menu-close ng-click="listdetail()">
+                        <i class="icon ion-ios-contact-outline"></i> ประวัติส่วนตัว
+                    </a>
+                    <a class="item item-icon-left settings-option" menu-close ng-click="doLogOut()">
+                        <i class="icon ion-ios-close-outline"></i> ออกจากระบบ
+                    </a>
+                </div>
             </div>
         </ion-content>
     </ion-side-menu>
