--- a/www/css/style.css
+++ b/www/css/style.css
@@ -58,6 +58,17 @@
         box-shadow: 0px 0px 4px rgba(0,0,0,0.7);
       }
 
+      .imagempf {
+        position: absolute;
+        
+        left: 16px;
+        max-width: 100px;
+        max-height: 100px;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+      }
+
       .list-item-content {
         padding: 5px;
       }
