--- a/www/templates/user-profile-detail.html
+++ b/www/templates/user-profile-detail.html
@@ -16,13 +16,13 @@
 
                 <div class="list card">
                     <div class="row">
-                        <!--<div class="col col-50">
+                        <div class="col">
                             <a ui-sref="app.tab.chat" class="item item-icon-left">
                                 <i class="icon ion-ios-chatbubble"></i> พูดคุย
                             </a>
-                        </div>-->
+                        </div>
                         <!--{{data.shipping}}-->
-                        <div class="col col-100">
+                        <div class="col">
                             <a ng-click="tel({{data.shipping.tel}})" class="item item-icon-left">
                                 <i class="icon ion-ios-telephone"></i> โทร {{data.shipping.tel}}
                             </a>
