--- a/www/templates/new-detail.html
+++ b/www/templates/new-detail.html
@@ -25,7 +25,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <a class="item item-icon-left" ng-click="joinChat(data.user)">
+                    <a class="item item-icon-left" ng-click="gotoChat(data.user)">
                         <i class="icon ion-ios-chatbubble"></i> พูดคุย
                     </a>
                 </div>
