--- a/www/templates/listReturn.html
+++ b/www/templates/listReturn.html
@@ -15,13 +15,13 @@
             <div class="col col-90">
                 <div class="button-bar">
                     <a class="button button-outline button-positive {{Request === true ? 'active' : ''}}" ng-click="Request = true ;Response = false;Received = false ;">แจ้งคืน
-                        <span class="badge badge-assertive badge-notify">{{countlistReturns}}</span>
+                        <!--<span class="badge badge-assertive badge-notify">{{countlistReturns}}</span>-->
                     </a>
                     <a class="button button-outline button-positive {{Response === true ? 'active' : ''}}" ng-click="Response = true;Received = false ;Request=false">ตอบกลับ
-                        <span class="badge badge-assertive badge-notify">{{countlistreturnResponse}}</span>
+                        <!--<span class="badge badge-assertive badge-notify">{{countlistreturnResponse}}</span>-->
                     </a>
                     <a class="button button-outline button-positive {{Received === true ? 'active' : ''}}" ng-click="Received = true; Response= false ;Request=false">ได้รับ
-                        <span class="badge badge-assertive badge-notify">{{countlistreturnReceived}}</span>
+                        <!--<span class="badge badge-assertive badge-notify">{{countlistreturnReceived}}</span>-->
                     </a>
                 </div>
             </div>
