--- a/www/templates/me-detail.html
+++ b/www/templates/me-detail.html
@@ -24,7 +24,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <a ui-sref="app.tab.chat" class="item item-icon-left">
+                    <a class="item item-icon-left" ng-click="gotoChat2(data.user)">
                         <i class="icon ion-ios-chatbubble"></i> พูดคุย
                     </a>
                 </div>
