--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -4,8 +4,11 @@
             <ion-nav-back-button id="back">
             </ion-nav-back-button>
             <ion-nav-buttons side="left">
-                <button class="button button-icon ion-navicon" menu-toggle="left">
-        </button>
+                <div class="badge-buttonnoti">
+                    <button class="button button-icon ion-navicon" menu-toggle="left">
+                        <span class="badge badge-assertive badge-notify1">{{countlistreceiveds + countStock + countlistReturned + countlistAr || 0}}</span>
+                        </button>
+                </div>
             </ion-nav-buttons>
         </ion-nav-bar>
         <ion-nav-view name="menuContent"></ion-nav-view>
@@ -30,19 +33,19 @@
                     </a>
                     <a class="item item-icon-left settings-option" menu-close ng-click="listreceived()">
                         <i class="icon ion-ios-bookmarks-outline"></i> รายการรับข้าว
-                        <span class="badge badge-assertive">{{countlistreceiveds}}</span>
+                        <span class="badge badge-assertive">{{countlistreceiveds || 0}}</span>
                     </a>
                     <a class="item item-icon-left settings-option" menu-close ng-click="liststock()">
                         <i class="icon ion-social-buffer-outline"></i> สต๊อก
-                        <span class="badge badge-assertive">{{countStock}}</span>
+                        <span class="badge badge-assertive">{{countStock || 0}}</span>
                     </a>
                     <a class="item item-icon-left settings-option" menu-close ng-click="listReturn()">
                         <i class="icon icon ion-ios-list-outline"></i> รายการใบแจ้งคืน
-                        <span class="badge badge-assertive">{{countlistReturned}}</span>
+                        <span class="badge badge-assertive">{{countlistReturned || 0}}</span>
                     </a>
                     <a class="item item-icon-left settings-option" menu-close ng-click="listAr()">
                         <i class="icon icon ion-ios-list-outline"></i> รายการใบแจ้งหนี้
-                        <span class="badge badge-assertive">{{countlistAr}}</span>
+                        <span class="badge badge-assertive">{{countlistAr || 0}}</span>
                     </a>
                     <a class="item item-icon-left settings-option" menu-close ng-click="listdetail()">
                         <i class="icon ion-ios-contact-outline"></i> ประวัติส่วนตัว
