--- a/www/templates/user-profile-detail.html
+++ b/www/templates/user-profile-detail.html
@@ -17,7 +17,7 @@
                 <div class="list card">
                     <div class="row">
                         <div class="col">
-                            <a ui-sref="app.tab.chat" class="item item-icon-left">
+                            <a class="item item-icon-left" ng-click="gotoChat3(data.user)">
                                 <i class="icon ion-ios-chatbubble"></i> พูดคุย
                             </a>
                         </div>
