--- a/www/css/style.css
+++ b/www/css/style.css
@@ -199,6 +199,16 @@ span1 {
    position: fixed !important;
    top: 0px !important;
 }
+
+.badge-notify-ios{
+   position: fixed !important;
+   top: 15px !important;
+}
+
+.badge-notify-android{
+   position: fixed !important;
+   top: 0px !important;
+}
 /*.amount {
     font-size: smaller !important;
 };*/
