show hide password

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -47,9 +47,9 @@
                         <i class="icon icon ion-ios-list-outline"></i> รายการใบแจ้งหนี้
                         <span class="badge badge-assertive">{{countlistAr || 0}}</span>
                     </a>
-                    <a class="item item-icon-left settings-option" menu-close ng-click="listdetail()">
+                    <!--<a class="item item-icon-left settings-option" menu-close ng-click="listdetail()">
                         <i class="icon ion-ios-contact-outline"></i> ประวัติส่วนตัว
-                    </a>
+                    </a>-->
                     <a class="item item-icon-left settings-option" menu-close ng-click="doLogOut()">
                         <i class="icon ion-ios-close-outline"></i> ออกจากระบบ
                     </a>
