--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -40,6 +40,11 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-more"></ion-nav-view>
   </ion-tab>-->
 
+  <div>
+    <ion-tab title="ประวัติส่วนตัว" icon-off="ion-ios-contact-outline" icon-on="ion-ios-contact" href="#/app/tab/listdetail">
+      <ion-nav-view name="tab-more"></ion-nav-view>
+    </ion-tab>
+  </div>
 
 
 
