--- a/www/css/style.css
+++ b/www/css/style.css
@@ -212,3 +212,16 @@ span1 {
 /*.amount {
     font-size: smaller !important;
 };*/
+.show-hide-input
+  {
+    display: inherit;
+    width: 100%;
+  }
+.toggle-view-anchor {
+    color: #cccccc !important;
+    display: block;
+    font-size: 24px;
+    width: 45px;
+    text-align: center;
+    font-weight: 500;
+}
