--- a/www/templates/new-detail.html
+++ b/www/templates/new-detail.html
@@ -35,7 +35,10 @@
                     </a>
                 </div>
                 <div class="col">
-                    <a ui-sref="app.tab.map({point:data._id})" class="item item-icon-left">
+                    <!--<a ui-sref="app.tab.map({point:data._id})" class="item item-icon-left">
+                        <i class="icon ion-ios-location"></i> นำทาง
+                    </a>-->
+                     <a ng-click="openMap({{data}})" class="item item-icon-left">
                         <i class="icon ion-ios-location"></i> นำทาง
                     </a>
                 </div>
