--- a/www/css/style.css
+++ b/www/css/style.css
@@ -225,3 +225,22 @@ span1 {
     text-align: center;
     font-weight: 500;
 }
+.item-detailRight {
+    float: right;
+    color: #444;
+    font-size: 14px;
+}
+.item-fontProfile{
+  font-size: 16px;
+}
+.item-editfontProfile{
+  margin-top: -5px;
+  color: #aaa !important;
+}
+.item-iconEditPro{
+  text-align: right;
+  font-size: 30px;
+}
+.item-fontEditDeli {
+    font-size: 14px;
+}
