--- a/www/templates/listdetail.html
+++ b/www/templates/listdetail.html
@@ -16,7 +16,7 @@
                 <div class="col col-20"></div>
                 <div class="col col-center user-data">
                     <!-- We need a wrapper with width set for the preload image directive -->
-                    <div class="user-image-outer">
+                    <div class="user-image-outer" align="center">
                         <pre-img ratio="_1_1" helper-class="rounded-image">
                             <img class="user-image height-100per text-center" id="myImage" ng-src="{{userStore.profileImageURL}}" spinner-on-load>
                         </pre-img>
