--- a/www/css/style.css
+++ b/www/css/style.css
@@ -248,6 +248,8 @@ span1 {
     height: 100% !important;
     width: 100% !important;
     border-radius: 50%;
+    max-height: 170px !important;
+    max-width: 170px !important;
 }
 .bg-gray {
     background-color: #e2e2e2 !important;
