--- a/www/templates/listdetail.html
+++ b/www/templates/listdetail.html
@@ -77,7 +77,7 @@
                 <!---->
                 <div class="row" ng-show="updateDeliver">
                     <div class="col">
-                        <button class="button button-balanced button-block" ng-click="updateProfileDeli(userStore)">อัพเดตโปรไฟล์</button>
+                        <button class="button button-balanced button-block" ng-click="updateProfileDeli(userStore);updateDeliver = false">อัพเดตโปรไฟล์</button>
                     </div>
                 </div>
 
