--- a/www/templates/listdetail.html
+++ b/www/templates/listdetail.html
@@ -25,8 +25,8 @@
                                 <i class="icon ion-ios-camera-outline font-30" ></i></span>
                     <!--<h3 class="user-name text-center">แก้ไขรูป</h3>-->
                     <div align="center">
-                        <h5 class="text-center">{{userStore.displayName}}</h5>
-                        <p align="center">{{userStore.address.tel}}</p>
+                        <h4 class="text-center">{{userStore.displayName}}</h4>
+                        <!--<p align="center">{{userStore.address.tel}}</p>-->
                     </div>
                 </div>
                 <div class="col col-20"></div>
@@ -72,7 +72,7 @@
                     <label class="item item-icon-right item-fontProfile">อำเภอ :<input class="item-input item-editfontProfile" type="text" placeholder="{{userStore.address.district ? userStore.address.district : 'อำเภอ'}}" ng-model="userStore.address.district"></label>
                     <label class="item item-icon-right item-fontProfile">จังหวัด :<input class="item-input item-editfontProfile" type="text" placeholder="{{userStore.address.province ? userStore.address.province : 'จังหวัด'}}" ng-model="userStore.address.province"></label>
                     <label class="item item-icon-right item-fontProfile">รหัสไปรษณีย์ :<input class="item-input item-editfontProfile" type="text" placeholder="{{userStore.address.postcode ? userStore.address.postcode : 'รหัสไปรษณีย์'}}" ng-model="userStore.address.postcode"></label>
-                    <label class="item item-icon-right item-fontProfile">เบอร์โทรศัพท์ :<input class="item-input item-editfontProfile" type="text" placeholder="{{userStore.address.tel ? userStore.address.tel : 'เบอร์โทรศัพท์'}}" ng-model="userStore.address.tel"></label>
+                    <label class="item item-icon-right item-fontProfile">อีเมลล์ :<input class="item-input item-editfontProfile" type="text" placeholder="{{userStore.address.tel ? userStore.address.tel : 'เบอร์โทรศัพท์'}}" ng-model="userStore.email"></label>
                 </div>
                 <!---->
                 <div class="row" ng-show="updateDeliver">
