--- a/www/templates/listdetail.html
+++ b/www/templates/listdetail.html
@@ -89,9 +89,9 @@
             </div>
 
             <div class="row">
-                <div class="col">
+                <!--<div class="col">
                     <button class="button button-positive button-block" ng-click="centerOnMe()">ลองอีกครั้ง</button>
-                </div>
+                </div>-->
                 <div class="col">
                     <button class="button button-balanced button-block" ng-click="postme()">ส่งตำแหน่ง</button>
                 </div>
