--- a/www/templates/tab-chat.html
+++ b/www/templates/tab-chat.html
@@ -1,12 +1,12 @@
-<ion-view view-title="แชท" cache-view="false">
+<ion-view view-title="สนทนา" cache-view="false">
     <!--<ion-nav-buttons side="right">-->
-        <!--<a class="button button-icon" ui-sref="app.shop.cart">
+    <!--<a class="button button-icon" ui-sref="app.shop.cart">
             <i class="icon ion-ios-cart"><span class="badge badge-assertive badge-cart">{{countProduct.getCountProduct()}}</span></i>
         </a>-->
     <!--</ion-nav-buttons>-->
     <ion-content>
-        <ion-list>
-            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats | filter: { users : { _id : user._id } }"
+        <ion-list ng-if="user">
+            <ion-item class=" item-avatar item-icon-right" ng-repeat="chat in chats | filter: { users : { _id : user._id } }"
                 type="item-text-wrap" ui-sref="app.tab.chat-detail({chatId: chat._id})">
                 <img ng-repeat="user in chat.users | filter: { _id : '!' + user._id}" ng-src="{{user.profileImageURL}}">
                 <h2 ng-repeat="user in chat.users | filter: { _id : '!' + user._id}">{{user.displayName}}</h2>
@@ -20,7 +20,7 @@
         </ion-list>
     </ion-content>
     <ion-footer-bar>
-        <i class="icon ion-android-person-add" style="font-size: 30px;" ui-sref="app.tab.listfriend"></i> 
+        <i class="icon ion-android-person-add" style="font-size: 30px;" ui-sref="app.tab.listfriend"></i>
         <span> เพิ่มการสนทนา</span>
     </ion-footer-bar>
 </ion-view>
