--- a/www/templates/new-detail.html
+++ b/www/templates/new-detail.html
@@ -30,7 +30,7 @@
                     </a>
                 </div>
                 <div class="col">
-                    <a ng-click="tels({{data.shipping.tel}})" class="item item-icon-left">
+                    <a ng-click="tels('{{data.shipping.tel}}')" class="item item-icon-left">
                         <i class="icon ion-ios-telephone"></i> โทร
                     </a>
                 </div>
