--- a/www/templates/me-detail.html
+++ b/www/templates/me-detail.html
@@ -29,7 +29,7 @@
                     </a>
                 </div>
                 <div class="col">
-                    <a ng-click="telephone({{data.shipping.tel}})" class="item item-icon-left">
+                    <a ng-click="telephone('{{data.shipping.tel}}')" class="item item-icon-left">
                         <i class="icon ion-ios-telephone"></i> โทร
                     </a>
                 </div>
