--- a/www/templates/user-profile-detail.html
+++ b/www/templates/user-profile-detail.html
@@ -23,7 +23,7 @@
                         </div>
                         <!--{{data.shipping}}-->
                         <div class="col">
-                            <a ng-click="tel({{data.shipping.tel}})" class="item item-icon-left">
+                            <a ng-click="tel('{{data.shipping.tel}}')" class="item item-icon-left">
                                 <i class="icon ion-ios-telephone"></i> โทร {{data.shipping.tel}}
                             </a>
                         </div>
