--- a/www/templates/tab-chat.html
+++ b/www/templates/tab-chat.html
@@ -19,8 +19,8 @@
             </ion-item>
         </ion-list>
     </ion-content>
-    <ion-footer-bar>
+    <!--<ion-footer-bar>
         <i class="icon ion-android-person-add" style="font-size: 30px;" ui-sref="app.tab.listfriend"></i>
         <span> เพิ่มการสนทนา</span>
-    </ion-footer-bar>
+    </ion-footer-bar>-->
 </ion-view>
