--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="false">
+<ion-side-menus enable-menu-with-back-views="false" ng-init="init()">
     <ion-side-menu-content>
         <ion-nav-bar>
             <ion-nav-back-button id="back">
