--- a/www/templates/tab-new.html
+++ b/www/templates/tab-new.html
@@ -1,4 +1,4 @@
-<ion-view view-title="งานใหม่" ng-init="init()">
+<ion-view view-title="งานใหม่" ng-init="init()" cache-view="false">
   <ion-content>
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
     </ion-refresher>
