update deliver version

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -56,5 +56,8 @@
                 </div>
             </div>
         </ion-content>
+        <ion-footer-bar class="bar-stable item-input-inset">
+            <p>เวอร์ชั่น : 0.0.10</p>
+        </ion-footer-bar>
     </ion-side-menu>
 </ion-side-menus>
